<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.brunoaguiar.geradoreleitordeqr.TelaInicial">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_gerador"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:id="@+id/botaoGerador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="gerador"
        android:text="@string/gerador" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_leitor"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"/>

    <Button
        android:id="@+id/botaoLeitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:text="@string/leitor"
        android:layout_gravity="center"
        android:onClick="leitor"/>
</LinearLayout>
